--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "amortize",
     "amortization",
     "mortgage",
-    "schedule"
+    "schedule",
+    "finance"
   ],
   "author": "David Booth",
   "license": "MIT",
